--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -72,11 +72,11 @@
                     LabelPosition="Collapsed"
                     Style="{StaticResource ReducedAppBarButtonRevealStyle}">
                     <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xE0A6;" />
+                        <FontIcon Margin="3" Glyph="&#xE0A6;" />
                     </AppBarButton.Icon>
                 </AppBarButton>
                 <TextBlock
-                    Margin="12,0,0,0"
+                    Margin="8,0,0,0"
                     VerticalAlignment="Center"
                     FontSize="17"
                     FontWeight="SemiBold"
