--- a/Cafeine/App.xaml
+++ b/Cafeine/App.xaml
@@ -1,10 +1,9 @@
-﻿<prismUnity:PrismUnityApplication
+﻿<Application
     x:Class="Cafeine.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine"
-    xmlns:prismUnity="using:Prism.Unity.Windows">
-    <prismUnity:PrismUnityApplication.Resources>
+    xmlns:local="using:Cafeine">
+    <Application.Resources>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-    </prismUnity:PrismUnityApplication.Resources>
-</prismUnity:PrismUnityApplication>
+    </Application.Resources>
+</Application>
