--- a/Cafeine/Views/BrowserAuthenticationPage.xaml
+++ b/Cafeine/Views/BrowserAuthenticationPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<mvvm:BasePage
     x:Class="Cafeine.Views.BrowserAuthenticationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,13 +7,14 @@
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Cafeine.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="using:Prism.Windows.Mvvm"
     xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
     xmlns:vm="using:Cafeine.ViewModels"
-    prism:ViewModelLocator.AutoWireViewModel="True"
+    xmlns:mvvm="using:Cafeine.Services.Mvvm"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
-
+    <mvvm:BasePage.DataContext>
+        <vm:BrowserAuthenticationPageViewModel/>
+    </mvvm:BasePage.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -54,4 +55,4 @@
             </i:Interaction.Behaviors>
         </WebView>
     </Grid>
-</Page>
+</mvvm:BasePage>
