--- a/Cafeine/Views/MainPage.xaml
+++ b/Cafeine/Views/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<mvvm:BasePage
     x:Class="Cafeine.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,27 +8,29 @@
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Cafeine"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="using:Prism.Windows.Mvvm"
     xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
-    xmlns:ui="using:Cafeine.Views"
+    xmlns:mvvm="using:Cafeine.Services.Mvvm"
+    xmlns:vm="using:Cafeine.ViewModels"
     xmlns:views="using:Cafeine.Views"
     xmlns:vr="using:Cafeine.Views.Resources"
-    prism:ViewModelLocator.AutoWireViewModel="True"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Required"
     mc:Ignorable="d">
+    <mvvm:BasePage.DataContext>
+        <vm:MainPageViewModel/>
+    </mvvm:BasePage.DataContext>
     <interactivity:Interaction.Behaviors>
         <core:EventTriggerBehavior EventName="Loaded">
             <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.MainPageLoaded}" />
         </core:EventTriggerBehavior>
     </interactivity:Interaction.Behaviors>
-    <Page.Resources>
+    <mvvm:BasePage.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <vr:Template />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Page.Resources>
+    </mvvm:BasePage.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -94,4 +96,4 @@
             </interactivity:Interaction.Behaviors>
         </GridView>
     </Grid>
-</Page>
+</mvvm:BasePage>
