[Fix] Temporary fix for app crashes
Initial guess is because the app can't find the font Cuprum

--- a/Cafeine/Views/LoginPage.xaml
+++ b/Cafeine/Views/LoginPage.xaml
@@ -44,9 +44,9 @@
                 </StackPanel.Transitions>
                 <TextBlock
                     HorizontalAlignment="Center"
-                    CharacterSpacing="150"
-                    FontFamily="Cuprum"
+                    CharacterSpacing="-10"
                     FontSize="70"
+                    FontWeight="Bold"
                     Text="CAFEINE"
                     TextWrapping="Wrap" />
                 <StackPanel
